--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -13,19 +13,17 @@
 main{
     width: 100vw;
     height: 100vh;
-    background-image: url(./Assets/images/pexels-tirachard-kumtanom-733857.jpg);
+    background-image: url(../images/pexels-tirachard-kumtanom-733857.jpg);
     background-size: cover;
-    /* opacity: 0.4; */
     padding-top: 1.6rem;
 }
 
 #container{
     margin: 0 auto;
-    width: 40rem;
-    height: 43rem;
+    width: 45%;
+    height: 96%;
     overflow: hidden;
     overflow-y: auto;
-    /* background-color: #659dbd; */
     background-color: #fff;
     box-shadow: inset 4px 9px 26px -12px rgba(0,0,0,0.75);
 }
@@ -34,58 +32,70 @@ main{
     display: none;
 }
 
-.title{
+ .title{
     text-align: center;
-    margin-top: 0.8rem;
-    margin-bottom: 1.2rem;
-    padding-bottom: 0.8rem;
+    margin: 4% 0 5% 0;
     color: #553d67;
     text-decoration: underline;
-    /* border-bottom: 1px solid black; */
+}
+.title h1{
+    font-size: 1.8rem;
 }
 
 .form-elem form{
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
-    padding-left: 1.5em;
+    padding-left: 2em;
 }
 
+
 .form-elem form input[type="text"]{
-    width: 33rem;
-    padding: 0.7rem;
-    /* border: none; */
+    width: 85%;
+    padding: 1.2%;
+    margin-top: 1%;
     border: 0.5px solid gray;
     border-radius: 0.6rem;
     outline: none;
 }
 
+
+.form-elem form label{
+    font-size: 1rem;
+}
+
 .select-container {
     display: flex;
-    padding-top: 1.2rem;
-    /* border-top: 1px solid black; */
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 4%;
 }
+
+
 .select-items{
     display: flex;
     flex-direction: column;
     width: 50%;
-    line-height: 2.5rem;
 }
+
+
 #standard-select{
     width: 80%;
-    padding: 0.3rem;
-    outline: none;
+    padding: 1.3%;
+    margin-top: 3%;
 }
+
+
 .time-container{
-    width: 50%;
+    margin-right: 13%;
+    width: 20%;
     display: flex;
     flex-direction: column;
-    line-height: 2.5rem;
-    padding-left: 4rem;
 }
+
+
 .time-container input[type="date"]{
-    width: 9rem;
-    padding: 0.2rem;
+    padding: 1.3%;
+    margin-top: 7%;
 }
 
 .btn-container{
@@ -95,44 +105,43 @@ main{
 }
 
 .btn-container a{
-    margin-right: 2.8rem;
-    margin-left: 2.8rem;
-    margin-top: 3rem;
+    margin: 7% 6% 0 6%;
     text-align: center;
+    font-size: 0.8rem;
+
+}
+.btn-container a i{
+    font-size: 0.8rem;
 }
 .btn1{
     background-color: rebeccapurple;
-    padding: 1rem;
-    color: white;
-    width: 11rem;
-    font-size: 1rem;
+    padding: 2%;
+    color: #fff;
+    width: 25%;
 }
+
 .btn2{
     background-color: rebeccapurple;
-    padding: 1rem;
-    color: white;
-    width: 11rem;
-    font-size: 1rem;
+    padding: 2%;
+    color: #fff;
+    width: 25%;
 }
+
 .btn2 i{
-    padding-right: 0.3rem;
+    padding-right: 5%;
 }
 
 #list-container{
     width: 90%;
     margin: 0 auto;
-    padding-top: 4rem;
+    margin-top: 8%;
 }
 
 #list-container ul li{
     width: 100%;
-    padding-top: 1.2rem;
-    padding-bottom: 0.6rem;
+    margin-top: 6%;
     display: flex;
     justify-content: space-between;
-    /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px; */
-    /* box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset; */
-    /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; */
 }
 
 .items{
@@ -142,23 +151,60 @@ main{
     padding: 0.7rem;
 }
 .items .checkbox-cnt input.defaultcheckbox{
-    width: 1.2rem;
-    height: 1.2rem;
+    width: 1rem;
+    height: 1rem;
+}
+.items h3{
+    font-size: 1rem;
 }
 
+.display-date p{
+    font-size: 0.7rem;
+}
 .select-color button{
+    font-size: 0.8rem;
     color: #fff;
     font-weight: 600;
     text-align: center;
-    width: 4rem;
+    width: 3rem;
     height: 2rem;
     border: none;
     border-radius: 0.3rem;
-    background-color: yellow;
+} 
+
+
+
+@media screen and (max-width: 1142px){
+    
+    .form-elem form label{
+        font-size: 0.8rem;
+    }
+    .time-container input[type="date"]{
+        font-size: 0.7rem;
+    }
+    .btn-container a{
+        font-size: 0.65rem;
+    
+    }
+    .select-color button{
+        font-size: 0.8rem;
+        width: 2.5rem;
+        height: 1.6rem;
+    } 
 }
 
-
-
-
-
-
+@media screen and (max-width: 960px){
+    .form-elem form label{
+        font-size: 0.7rem;
+    }
+    .time-container input[type="date"]{
+        font-size: 0.57rem;
+    }
+    .btn-container a{
+        font-size: 0.6rem;
+    
+    }
+    .btn-container a i{
+        font-size: 0.7rem;
+    }
+}
